# lookahead

./: Cargo.toml  README.md
.github/workflows/: cargo-audit.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-publish.yml  cargo-test.yml
src/: lib.rs
